Make the path generate the view model
Use the path to govern the lifecycle its retained view model
Allow the path to provide extra layouts that can be added alongside its
main one (such as fabs)

--- a/gearshift2/src/main/res/values/refs.xml
+++ b/gearshift2/src/main/res/values/refs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="view_content" type="id" />
+    <item name="view_content_extra" type="id" />
 </resources>
