--- a/gearshift2/src/main/res/layout/main_navigation_app_bar.xml
+++ b/gearshift2/src/main/res/layout/main_navigation_app_bar.xml
@@ -25,9 +25,10 @@
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
-                bind:onMenuItemClickListener="@{viewModel.toolbarListener}">
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
             </android.support.v7.widget.Toolbar>
 
