--- a/gearshift2/src/main/res/layout/action_view_progress.xml
+++ b/gearshift2/src/main/res/layout/action_view_progress.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
-    style="?android:progressBarStyleLarge"
+    style="?android:progressBarStyle"
     android:id="@+id/progressBar"
+    android:padding="12dp"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="end"/>
+    android:layout_height="wrap_content"/>
