--- a/gearshift/src/main/res/layout/settings_profile_header.xml
+++ b/gearshift/src/main/res/layout/settings_profile_header.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     style="?android:attr/listSeparatorTextViewStyle"/>
