--- a/gearshift/src/main/res/layout/torrent_list_content.xml
+++ b/gearshift/src/main/res/layout/torrent_list_content.xml
@@ -5,10 +5,10 @@
     <data>
         <variable
             name="viewModel"
-            type="org.sugr.gearshift.viewmodel.MainNavigationViewModel"/>
+            type="org.sugr.gearshift.viewmodel.TorrentListViewModel"/>
     </data>
 
-    <FrameLayout
+    <org.sugr.gearshift.ui.view.TorrentListView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -18,11 +18,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/refresh"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp">
+            android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -31,5 +27,5 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </FrameLayout>
+    </org.sugr.gearshift.ui.view.TorrentListView>
 </layout>
