--- a/gearshift/src/main/res/layout/torrent_list_content.xml
+++ b/gearshift/src/main/res/layout/torrent_list_content.xml
@@ -16,11 +16,11 @@
 		tools:showIn="@layout/main_navigation_app_bar">
 
         <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
             android:layout_width="0dp"
             android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
+	            android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 				android:scrollbars="vertical"/>
