--- a/gearshift/src/main/res/values/dimens.xml
+++ b/gearshift/src/main/res/values/dimens.xml
@@ -8,4 +8,9 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="torrent_list_status_height">24dp</dimen>
+
+    <dimen name="torrent_list_name_text_size">16sp</dimen>
+    <dimen name="torrent_list_traffic_text_size">10sp</dimen>
+    <dimen name="torrent_list_status_text_size">12sp</dimen>
+    <dimen name="torrent_list_error_text_size">10sp</dimen>
 </resources>
