--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -6,13 +6,17 @@
     <color name="colorAccentDark">#C51162</color>
 
     <color name="colorRequired">#B71C1C</color>
-	<color name="error">#F44336</color>
+	<color name="error">#F44336</color> <!-- Red 500 -->
+    <color name="errorDisabled">#EF9A9A</color> <!-- Red 200 -->
     <color name="separator">#CBCBCD</color>
 
 	<color name="statusSheet">#DDDDDD</color>
-    <color name="progress_background">#B0BEC5</color> <!-- Blue grey 200 -->
-    <color name="progress_secondary">#03A9F4</color> <!-- Light blue 500 -->
-    <color name="progress_primary">#76FF03</color> <!-- Light green A400 -->
+    <color name="progressBackground">#B0BEC5</color> <!-- Blue grey 200 -->
+    <color name="progressSecondary">#03A9F4</color> <!-- Light blue 500 -->
+    <color name="progressPrimary">#76FF03</color> <!-- Light green A400 -->
 
     <color name="check_indicator">#757575</color> <!-- Grey 600 -->
+
+	<color name="primaryDark">#202020</color>
+	<color name="primaryDarkDisabled">#9E9E9E</color> <!-- Grey 500 -->
 </resources>
