use diffutil in order to calc the new list in a separate thread

--- a/gearshift/src/main/res/layout/torrent_list_bottom_sheet.xml
+++ b/gearshift/src/main/res/layout/torrent_list_bottom_sheet.xml
@@ -33,7 +33,7 @@
 				android:paddingBottom="4dp"
 				android:maxLines="1"
 				android:ellipsize="end"
-				android:gravity="end"
+				android:gravity="end|center_vertical"
 				android:textSize="12sp"
 				android:text="@{viewModel.statusText}"
 				tools:text="Down: 1.5 MB/s, Up: 0.23 Mb/s, Space: 1.7TB"/>
