--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
 	<data>
 		<variable
 			name="viewModel"
@@ -14,7 +15,8 @@
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
 		android:background="?android:selectableItemBackground"
-		android:minHeight="?android:listPreferredItemHeightSmall">
+		android:minHeight="?android:listPreferredItemHeightSmall"
+		bind:activated="@{viewModel.isChecked}">
 
 		<FrameLayout
 			android:layout_width="wrap_content"
@@ -33,10 +35,13 @@
 
 			<ProgressBar
 				style="?android:attr/progressBarStyleHorizontal"
+				android:id="@+id/selection"
 				android:layout_width="64dp"
 				android:layout_height="64dp"
 				android:indeterminate="false"
 				android:progressDrawable="@drawable/circular_progress_bar"
+				android:background="?android:selectableItemBackgroundBorderless"
+				android:clickable="true"
 				android:alpha="@{viewModel.isActive ? 1.0f : 0.5f}"
 				android:max="100"
 				android:progress="@{viewModel.uploadProgress}"
@@ -93,7 +98,6 @@
 				tools:text="Downloading from 20 of 60 connected peers" />
 
 			<TextView
-				android:id="@+id/error_text"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:ellipsize="marquee"
