--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+	<color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorAccentDark">#C51162</color>
 
@@ -19,4 +19,7 @@
 
 	<color name="primaryDark">#202020</color>
 	<color name="primaryDarkDisabled">#9E9E9E</color> <!-- Grey 500 -->
+
+	<color name="selectionToolbar">#FF5252</color>
+	<color name="selectionStatusBar">#C0CA33</color>
 </resources>
