--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
 	<color name="primaryDarkDisabled">#9E9E9E</color> <!-- Grey 500 -->
 
 	<color name="selectionToolbar">#FF5252</color>
-	<color name="selectionStatusBar">#C0CA33</color>
+	<color name="selectionStatusBar">#D50000</color>
 </resources>
