Display a directory icon if the torrent represents a directory

--- a/gearshift/src/main/res/layout/torrent_list_item.xml
+++ b/gearshift/src/main/res/layout/torrent_list_item.xml
@@ -40,8 +40,9 @@
 				android:layout_height="64dp"
 				android:layout_marginTop="8dp"
 				android:layout_marginBottom="8dp"
-				android:indeterminate="false"
+				android:indeterminate="@{viewModel.awaitingCompletion}"
 				android:progressDrawable="@drawable/circular_progress_bar"
+				android:indeterminateDrawable="@drawable/circular_indeterminate_bar"
 				android:clickable="true"
 				android:max="100"
 				android:visibility="@{viewModel.isChecked ? View.GONE : View.VISIBLE}"
