Implement spanned coloring of search hits

--- a/gearshift/src/main/res/values/colors.xml
+++ b/gearshift/src/main/res/values/colors.xml
@@ -22,4 +22,8 @@
 
 	<color name="selectionToolbar">#FF5252</color>
 	<color name="selectionStatusBar">#D50000</color>
+
+	<color name="filterHighlightPrimary">#E68305</color>
+	<color name="filterHighlightSecondary">#C98733</color>
+
 </resources>
