--- a/gearshift/src/main/res/layout/nav_header_torrent.xml
+++ b/gearshift/src/main/res/layout/nav_header_torrent.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
+	<data>
+		<variable
+			name="viewModel"
+			type="org.sugr.gearshift.viewmodel.MainNavigationViewModel"/>
+	</data>
 
-    <ImageView android:id="@+id/imageView" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:src="@android:drawable/sym_def_app_icon" />
+	<LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/header"
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/nav_header_height"
+		android:background="@color/colorPrimary"
+		android:gravity="bottom"
+		android:orientation="vertical"
+		android:paddingBottom="@dimen/activity_vertical_margin"
+		android:paddingLeft="@dimen/activity_horizontal_margin"
+		android:paddingRight="@dimen/activity_horizontal_margin"
+		android:paddingTop="@dimen/activity_vertical_margin"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+		<ImageView android:id="@+id/imageView" android:layout_width="wrap_content"
+				   android:layout_height="wrap_content"
+				   android:paddingTop="@dimen/nav_header_vertical_spacing" android:src="@android:drawable/sym_def_app_icon" />
 
-    <TextView android:id="@+id/textView" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:text="android.studio@android.com" />
+		<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+				  android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Android Studio"
+				  android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-</LinearLayout>
+		<TextView android:id="@+id/textView" android:layout_width="wrap_content"
+				  android:layout_height="wrap_content" android:text="android.studio@android.com" />
+
+	</LinearLayout>
+</layout>
